<resources>
    <string name="app_name">SEG2105 Project</string>
    <string name="address"><u>Postal Address:</u></string>
    <string name="username"><u>Email Address</u></string>
    <string name="password"><u>Password</u></string>
</resources>